@@ -865,4 +865,6 @@ Version 1.5-4
    
    o  Confint() modified to include coefficient estimates, and to include exponentiated coefficients for binomial logit models (suggested by  Ricardo Ocana-Riola). Small fix to method for multinom models.
    
+   o  Added cld() display to pairwise comparisons in one-way ANOVA (suggested by Marcin Kozak).
+   
    o  Small fixes to docs.
